Crash when select keyframe of an object in timeline editor #55775

Closed
opened 2018-07-05 16:33:55 +02:00 by Valentin · 3 comments
Member

System Information
OS: window 7
cpu: amd-fx 8350
gpu: gtx 970

Blender Version
Blender 2.8 53c63db New compiler

Short description of error
Crash when select keyframe of an object in timeline editor

Exact steps for others to reproduce the error
Blender file : bug_timeline.blend

  • In the Timeline editor see Dope sheet Summary
  • Select any keyframe of Cube object
  • It crashes
**System Information** OS: window 7 cpu: amd-fx 8350 gpu: gtx 970 **Blender Version** Blender 2.8 53c63db New compiler **Short description of error** Crash when select keyframe of an object in timeline editor **Exact steps for others to reproduce the error** Blender file : [bug_timeline.blend](https://archive.blender.org/developer/F3875431/bug_timeline.blend) * In the Timeline editor see Dope sheet Summary * Select any keyframe of **Cube** object * It crashes
Author
Member

Added subscriber: @Poulpator

Added subscriber: @Poulpator
Joshua Leung self-assigned this 2018-07-06 04:33:58 +02:00

This issue was referenced by 88a6aab8bb

This issue was referenced by 88a6aab8bbce423e042419fe26891bf8c5fbf84e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55775
No description provided.