Fix T55775: Crash when select keyframe on object channels in Timeline editor